# qbit

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: bin.rs
lang/: Cargo.toml
lang/src/: error.rs  lib.rs  wasm.rs
lang/src/ast/: expr.rs  op.rs  stmt.rs  value.rs
lang/src/lexer/: mod.rs  utils.rs
lang/src/parser/: builder.rs  config.rs  error.rs  mod.rs
lang/src/parser/analyzer/: context.rs  diagnostic.rs  error.rs  mod.rs  warning.rs
lang/src/parser/debug/: error.rs  mod.rs  warning.rs
lang/src/vscode/: mod.rs  result.rs
lang/tests/parser/: expr.rs  mod.rs  stmt.rs
scripts/: fib.qb
vscode/: .gitignore  configuration.json  language-configuration.json  package-lock.json  package.json  qbit-lang-0.1.0.vsix  tsconfig.json
vscode/src/: completion.ts  diagnostics.ts  extension.ts  hover.ts  parser.ts
vscode/syntaxes/: qbit.tmLanguage.json
vscode/test/: main.qb
